--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1{ margin-left: auto;
      margin-left: -8px;
     margin-right: -8px; 
 }
-.keys{
+/*.keys{
     margin-top: -34px;
     margin-left: -8px;
     margin-right: -8px;
@@ -21,7 +21,7 @@ h1{ margin-left: auto;
     color: black;
     font-size: 25px;
     background-color:palevioletred ;
-}
+}*/
 a{
     color: black;
 }
