--- a/style.css
+++ b/style.css
@@ -164,8 +164,9 @@ img{
     text-justify: distribute;   
 }
 .ptext{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 20px;
+    font-size: 19px;
+    opacity: 0.5;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .fline{
     font-size: 20px;
